Rewrite using LSP