@@ -1,43 +1,39 @@
 plugins {
-    id "java"
-    id "application"
+    id 'java'
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.9'
 }
 
 repositories {
     jcenter()
     mavenCentral()
+    maven { url 'http://sandec.bintray.com/repo' }
 }
 
-group "io.github.proton"
-version "1.0-SNAPSHOT"
+group 'io.github.proton'
+version '1.0-SNAPSHOT'
+
+javafx {
+    modules = [ 'javafx.controls' ]
+}
 
 dependencies {
-    compile "io.vavr:vavr:0.9.3"
-    compile "org.slf4j:slf4j-nop:1.7.9"
-    compile "org.pf4j:pf4j:3.2.0"
-    implementation 'io.github.vincenzopalazzo:material-ui-swing:1.1.1-rc4'
-    implementation 'com.github.javaparser:javaparser-core:3.16.1'
-    annotationProcessor "org.pf4j:pf4j:3.2.0"
-}
-
-sourceCompatibility = JavaVersion.VERSION_14
-targetCompatibility = JavaVersion.VERSION_14
-
-tasks.withType(JavaCompile) {
-    options.compilerArgs += "--enable-preview"
-}
-
-tasks.withType(JavaExec) {
-    jvmArgs += '--enable-preview'
+    compile 'org.slf4j:slf4j-simple:1.7.9'
+    compile 'org.pf4j:pf4j:3.2.0'
+    compile 'io.vavr:vavr:0.10.3'
+    compile 'org.fxmisc.richtext:richtextfx:0.10.5'
+    compile 'org.eclipse.lsp4j:org.eclipse.lsp4j:0.9.0'
+    compile 'com.sandec:mdfx:0.1.6'
+    annotationProcessor 'org.pf4j:pf4j:3.2.0'
 }
 
 application {
-    mainClassName = "io.github.proton.Main"
+    mainClassName = 'io.github.proton.Proton'
 }
 
 jar {
     manifest {
-        attributes "Main-Class": "io.github.proton.ui.Proton"
+        attributes 'Main-Class': 'io.github.proton.ui.Proton'
     }
 
     from {
